[tool.poetry]
name = "c-ffi-overhead"
version = "0.1.0"
description = ""
authors = ["Amirouche <amirouche@hyper.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
cffi = "^1.14.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
